--- a/Solutions/index2.html
+++ b/Solutions/index2.html
@@ -3,13 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-    <title>FLOWER API QUIZ</title>
+    <link rel="stylesheet" href="index2.css">
+    <title>Document</title>
 </head>
 <body>
-    <ul class="emoji-flower-bed"></ul>
-
-   
-<script src="./challange28.js"></script>
+    <script src="index2.html"></script>
 </body>
 </html>
