--- a/Solutions/index2.html
+++ b/Solutions/index2.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index2.css">
-    <title>Document</title>
+    <title>fruit APi</title>
 </head>
 <body>
-    <script src="index2.html"></script>
+    <div class="container">
+        <ul class="emoji-slots-game">
+    </div>
+    <script src="challange29.js"></script>
 </body>
 </html>
